Fix background cover on mobile android.

--- a/Dragonputer/Content/site.less
+++ b/Dragonputer/Content/site.less
@@ -13,10 +13,16 @@
     clear: both;
 }
 
+html {
+    height: 100%;
+    min-height: 100%;
+}
+
 body {
-    background: #666 no-repeat center center fixed;
-    .background-size(cover);
+    background: @body-bg no-repeat center center fixed;
+    .background-size(cover) !important;
     padding-top: @navbar-height;
+    min-height:100%;
 }
 
 .app-modals {
